--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     #controls button { margin: 0 6px; font-size: 1.2em; padding: 7px 14px; border-radius: 5px; border: 1px solid #888; background: #333; color: #eee; cursor: pointer; }
     #controls button:hover { background: #2c6; color: #222; border-color: #3a3; }
     #frameInfo { margin: 0 14px; font-weight: bold; }
+    #theatre { position: relative; width: 100vw; height: 70vh; overflow: visible; }
+    #pantin { width: 100%; height: 100%; overflow: visible; }
+    #transformControls { text-align: center; margin-top: 12px; }
+    #transformControls label { margin: 0 12px; }
+    #transformControls input[type=range] { width: 200px; }
   </style>
   <!-- Interact.js CDN obligatoire pour interactions.js -->
 <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
@@ -20,6 +25,14 @@
   <object id="pantin" data="manu.svg" type="image/svg+xml"></object>
   </div>
   <div id="controls"></div>
+  <div id="transformControls">
+    <label>Rotation
+      <input id="rotateSlider" type="range" min="-180" max="180" value="0">
+    </label>
+    <label>Échelle
+      <input id="scaleSlider" type="range" min="0.1" max="3" step="0.1" value="1">
+    </label>
+  </div>
 
   <script type="module" src="./src/main.js"></script>
 </body>
