--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     #controls { text-align: center; margin-bottom: 24px; }
     #controls button { margin: 0 6px; font-size: 1.2em; padding: 7px 14px; border-radius: 5px; border: 1px solid #888; background: #333; color: #eee; cursor: pointer; }
     #controls button:hover { background: #2c6; color: #222; border-color: #3a3; }
+    #controls input[type=range] { vertical-align: middle; }
     #frameInfo { margin: 0 14px; font-weight: bold; }
+    #theatre { width: 800px; height: 600px; margin: auto; border: 1px solid #555; }
+    #theatre svg { width: 100%; height: 100%; }
   </style>
   <!-- Interact.js CDN obligatoire pour interactions.js -->
 <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
@@ -17,7 +20,7 @@
 <body>
   <h1 style="text-align:center;">Pantin Animateur</h1>
   <div id="theatre">
-  <object id="pantin" data="manu.svg" type="image/svg+xml"></object>
+    <div id="pantinContainer"></div>
   </div>
   <div id="controls"></div>
 
