Embed SVG inline and add sliders

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     #controls button { margin: 0 6px; font-size: 1.2em; padding: 7px 14px; border-radius: 5px; border: 1px solid #888; background: #333; color: #eee; cursor: pointer; }
     #controls button:hover { background: #2c6; color: #222; border-color: #3a3; }
     #frameInfo { margin: 0 14px; font-weight: bold; }
+    #controls input[type=range] { vertical-align: middle; }
   </style>
   <!-- Interact.js CDN obligatoire pour interactions.js -->
 <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
@@ -17,7 +18,7 @@
 <body>
   <h1 style="text-align:center;">Pantin Animateur</h1>
   <div id="theatre">
-  <object id="pantin" data="manu.svg" type="image/svg+xml"></object>
+    <div id="pantin" data-src="manu.svg"></div>
   </div>
   <div id="controls"></div>
 
