--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Pantin Animateur</title>
   <style>
     body { font-family: sans-serif; background: #181818; color: #eaeaea; margin:0; }
+    g#manu_test { width: 100%; overflow: visible; }
     #controls { text-align: center; margin-bottom: 24px; }
     #controls button { margin: 0 6px; font-size: 1.2em; padding: 7px 14px; border-radius: 5px; border: 1px solid #888; background: #333; color: #eee; cursor: pointer; }
     #controls button:hover { background: #2c6; color: #222; border-color: #3a3; }
@@ -16,12 +17,18 @@
 </head>
 <body>
   <h1 style="text-align:center;">Pantin Animateur</h1>
-  <div id="theatre">
-  <object id="pantin" data="manu.svg" type="image/svg+xml"></object>
+  <div id="theatre" style="width: 100%; height: 70vh; overflow: hidden; touch-action: none;">
+    <!-- Le SVG sera injecté ici par JS -->
   </div>
   <div id="controls"></div>
+  <div id="pantin-controls" style="text-align: center; margin-top: 20px; padding: 10px; background: #2a2a2a;">
+      <label for="scale-slider">Scale:</label>
+      <input type="range" id="scale-slider" min="0.1" max="3" step="0.05" value="1">
+      <label for="rotate-slider">Rotate:</label>
+      <input type="range" id="rotate-slider" min="-180" max="180" step="1" value="0">
+  </div>
 
-  <script type="module" src="./src/main.js"></script>
+  <script type="module" src="./src/main.js?v=2"></script>
 </body>
 </html>
 
