--- a/index.html
+++ b/index.html
@@ -2,31 +2,71 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pantin Animateur</title>
   <style>
-    body { font-family: sans-serif; background: #181818; color: #eaeaea; margin:0; }
-    #controls { text-align: center; margin-bottom: 24px; }
-    #controls button { margin: 0 6px; font-size: 1.2em; padding: 7px 14px; border-radius: 5px; border: 1px solid #888; background: #333; color: #eee; cursor: pointer; }
-    #controls button:hover { background: #2c6; color: #222; border-color: #3a3; }
-    #frameInfo { margin: 0 14px; font-weight: bold; }
+    :root {
+      --bg: #1e1e1e;
+      --toolbar-bg: #2b2b2b;
+      --btn-bg: #3b3b3b;
+      --accent: #4caf50;
+    }
+    * { box-sizing: border-box; }
+    body {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      margin: 0;
+      font-family: 'Segoe UI', Roboto, sans-serif;
+      background: var(--bg);
+      color: #eaeaea;
+    }
+    #theatre {
+      flex: 1;
+      overflow: hidden;
+      touch-action: none;
+    }
+    .toolbar {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      padding: 8px;
+      background: var(--toolbar-bg);
+    }
+    #controls { box-shadow: 0 2px 4px rgba(0,0,0,0.4); }
+    #pantin-controls { box-shadow: 0 -2px 4px rgba(0,0,0,0.4); }
+    .toolbar button {
+      border: none;
+      background: var(--btn-bg);
+      color: #eaeaea;
+      padding: 6px 12px;
+      border-radius: 4px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.2s, transform 0.2s;
+    }
+    .toolbar button:hover {
+      background: var(--accent);
+      color: #1e1e1e;
+      transform: translateY(-1px);
+    }
+    .toolbar input[type="range"] {
+      accent-color: var(--accent);
+    }
   </style>
   <!-- Interact.js CDN obligatoire pour interactions.js -->
-<script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
 </head>
 <body>
-  <div id="theatre" style="width: 100%; height: 70vh; overflow: hidden; touch-action: none;">
-    <!-- Le SVG sera injecté ici par JS -->
+  <div id="controls" class="toolbar"></div>
+  <div id="theatre"></div>
+  <div id="pantin-controls" class="toolbar">
+    <label for="scale-slider">Scale:</label>
+    <input type="range" id="scale-slider" min="0.1" max="3" step="0.05" value="1">
+    <label for="rotate-slider">Rotate:</label>
+    <input type="range" id="rotate-slider" min="-180" max="180" step="1" value="0">
   </div>
-  <div id="controls"></div>
-  <div id="pantin-controls" style="text-align: center; margin-top: 20px; padding: 10px; background: #2a2a2a;">
-      <label for="scale-slider">Scale:</label>
-      <input type="range" id="scale-slider" min="0.1" max="3" step="0.05" value="1">
-      <label for="rotate-slider">Rotate:</label>
-      <input type="range" id="rotate-slider" min="-180" max="180" step="1" value="0">
-  </div>
-
   <script type="module" src="./src/main.js?v=2"></script>
 </body>
 </html>
-
