--- a/index.html
+++ b/index.html
@@ -3,30 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <title>Pantin Animateur</title>
-  <style>
-    body { font-family: sans-serif; background: #181818; color: #eaeaea; margin:0; }
-    #controls { text-align: center; margin-bottom: 24px; }
-    #controls button { margin: 0 6px; font-size: 1.2em; padding: 7px 14px; border-radius: 5px; border: 1px solid #888; background: #333; color: #eee; cursor: pointer; }
-    #controls button:hover { background: #2c6; color: #222; border-color: #3a3; }
-    #frameInfo { margin: 0 14px; font-weight: bold; }
-  </style>
-  <!-- Interact.js CDN obligatoire pour interactions.js -->
-<script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
-
+  <link rel="stylesheet" href="style.css">
+  <script src="./src/interact.min.js" defer></script>
+  <script type="module" src="./src/main.js"></script>
 </head>
 <body>
-  <div id="theatre" style="width: 100%; height: 70vh; overflow: hidden; touch-action: none;">
-    <!-- Le SVG sera injecté ici par JS -->
-  </div>
-  <div id="controls"></div>
-  <div id="pantin-controls" style="text-align: center; margin-top: 20px; padding: 10px; background: #2a2a2a;">
-      <label for="scale-slider">Scale:</label>
-      <input type="range" id="scale-slider" min="0.1" max="3" step="0.05" value="1">
-      <label for="rotate-slider">Rotate:</label>
-      <input type="range" id="rotate-slider" min="-180" max="180" step="1" value="0">
+
+  <div class="app-container">
+    <!-- Panneau de droite pour les contrôles globaux -->
+    <aside id="inspector-panel">
+      <h3>Inspecteur</h3>
+      <div id="pantin-controls">
+        <label for="scale-slider">Échelle</label>
+        <input type="range" id="scale-slider" min="0.1" max="3" step="0.05" value="1">
+        
+        <label for="rotate-slider">Rotation</label>
+        <input type="range" id="rotate-slider" min="-180" max="180" step="1" value="0">
+      </div>
+    </aside>
+
+    <!-- Zone principale pour le SVG -->
+    <main id="theatre"></main>
+
+    <!-- Panneau du bas pour la timeline -->
+    <footer id="timeline-panel">
+      <div id="timeline-controls">
+        <button id="prevFrame" title="Image précédente">⏮️</button>
+        <button id="playAnim" title="Lire l'animation">▶️</button>
+        <button id="stopAnim" title="Arrêter">⏹️</button>
+        <button id="nextFrame" title="Image suivante">⏭️</button>
+      </div>
+      <div id="timeline-slider-container">
+        <input type="range" id="timeline-slider" min="0" max="0" step="1" value="0">
+      </div>
+      <div id="timeline-actions">
+        <button id="addFrame" title="Ajouter une image">➕</button>
+        <button id="delFrame" title="Supprimer l'image">🗑️</button>
+        <span id="frameInfo">1 / 1</span>
+      </div>
+      <div id="app-actions">
+        <button id="exportAnim">💾 Export</button>
+        <input type="file" id="importAnim" accept=".json" style="display:none" />
+        <button id="importAnimBtn">📂 Import</button>
+        <button id="resetStorage" title="Réinitialiser le projet">⚠️</button>
+      </div>
+    </footer>
   </div>
 
-  <script type="module" src="./src/main.js?v=2"></script>
 </body>
 </html>
-
