--- a/index.html
+++ b/index.html
@@ -2,53 +2,84 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pantin Animateur</title>
   <link rel="stylesheet" href="style.css">
   <script src="./src/interact.min.js" defer></script>
   <script type="module" src="./src/main.js"></script>
 </head>
 <body>
-
-  <div class="app-container">
-    <!-- Panneau de droite pour les contrôles globaux -->
-    <aside id="inspector-panel">
+  <div id="app-container" class="app-container">
+    <aside id="inspector-panel" role="region" aria-label="Contrôles de l'inspecteur">
       <h3>Inspecteur</h3>
+      <div id="selection-info">
+        <label for="selected-element-name">Sélection</label>
+        <output id="selected-element-name">Pantin</output>
+      </div>
       <div id="pantin-controls">
-        <label for="scale-slider">Échelle</label>
-        <input type="range" id="scale-slider" min="0.1" max="3" step="0.05" value="1">
-        
-        <label for="rotate-slider">Rotation</label>
-        <input type="range" id="rotate-slider" min="-180" max="180" step="1" value="0">
+        <div class="control-group">
+          <label for="scale-value">Échelle</label>
+          <div class="value-stepper">
+            <button type="button" id="scale-minus" aria-label="Diminuer l'échelle">-</button>
+            <output id="scale-value" for="scale-minus scale-plus">1.00</output>
+            <button type="button" id="scale-plus" aria-label="Augmenter l'échelle">+</button>
+          </div>
+        </div>
+        <div class="control-group">
+          <label for="rotate-value">Rotation</label>
+          <div class="value-stepper">
+            <button type="button" id="rotate-minus" aria-label="Diminuer la rotation">-</button>
+            <output id="rotate-value" for="rotate-minus rotate-plus">0</output>
+            <button type="button" id="rotate-plus" aria-label="Augmenter la rotation">+</button>
+          </div>
+        </div>
+      </div>
+      <div id="onion-skin-controls" role="region" aria-label="Contrôles Onion Skin">
+        <h3>Onion Skin</h3>
+        <div class="control-group">
+          <input type="checkbox" id="onion-skin-toggle">
+          <label for="onion-skin-toggle">Activer</label>
+        </div>
+        <div class="control-group">
+          <label for="past-frames">Images passées</label>
+          <input type="number" id="past-frames" value="1" min="0" max="10">
+        </div>
+        <div class="control-group">
+          <label for="future-frames">Images futures</label>
+          <input type="number" id="future-frames" value="1" min="0" max="10">
+        </div>
       </div>
     </aside>
-
-    <!-- Zone principale pour le SVG -->
-    <main id="theatre"></main>
-
-    <!-- Panneau du bas pour la timeline -->
-    <footer id="timeline-panel">
+    <main id="theatre" role="main"></main>
+    <footer id="timeline-panel" role="contentinfo">
       <div id="timeline-controls">
-        <button id="prevFrame" title="Image précédente">⏮️</button>
-        <button id="playAnim" title="Lire l'animation">▶️</button>
-        <button id="stopAnim" title="Arrêter">⏹️</button>
-        <button id="nextFrame" title="Image suivante">⏭️</button>
+        <button type="button" id="prevFrame" title="Image précédente" aria-label="Image précédente">⏮️</button>
+        <button type="button" id="playAnim" title="Lire l'animation" aria-label="Lire l'animation">▶️</button>
+        <button type="button" id="stopAnim" title="Arrêter" aria-label="Arrêter">⏹️</button>
+        <button type="button" id="nextFrame" title="Image suivante" aria-label="Image suivante">⏭️</button>
       </div>
       <div id="timeline-slider-container">
+        <label for="timeline-slider" class="sr-only">Position dans la timeline</label>
         <input type="range" id="timeline-slider" min="0" max="0" step="1" value="0">
       </div>
       <div id="timeline-actions">
-        <button id="addFrame" title="Ajouter une image">➕</button>
-        <button id="delFrame" title="Supprimer l'image">🗑️</button>
-        <span id="frameInfo">1 / 1</span>
+        <div class="control-group fps-control">
+          <label for="fps-input">FPS</label>
+          <input type="number" id="fps-input" value="10" min="1" max="60">
+        </div>
+        <button type="button" id="addFrame" title="Ajouter une image" aria-label="Ajouter une image">➕</button>
+        <button type="button" id="delFrame" title="Supprimer l'image" aria-label="Supprimer l'image">🗑️</button>
+        <span id="frameInfo" aria-live="polite">1 / 1</span>
       </div>
       <div id="app-actions">
-        <button id="exportAnim">💾 Export</button>
-        <input type="file" id="importAnim" accept=".json" style="display:none" />
-        <button id="importAnimBtn">📂 Import</button>
-        <button id="resetStorage" title="Réinitialiser le projet">⚠️</button>
+        <button type="button" id="inspector-toggle-btn" title="Afficher/Masquer l'inspecteur" aria-label="Afficher/Masquer l'inspecteur">↔️</button>
+        <button type="button" id="exportAnim" title="Exporter l'animation" aria-label="Exporter l'animation">💾 Export</button>
+        <label for="importAnim" id="importAnimBtn" class="button" tabindex="0" aria-label="Importer l'animation">📂 Import</label>
+        <input type="file" id="importAnim" accept=".json" style="display:none">
+        <button type="button" id="resetStorage" title="Réinitialiser le projet" aria-label="Réinitialiser le projet">⚠️</button>
       </div>
     </footer>
   </div>
-
 </body>
 </html>
+
