beurk mieux plus plus

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pantin Animateur</title>
+  <title>Anime toi aussi ton pantin grotesque !</title>
   <link rel="stylesheet" href="style.css">
   <script src="./src/interact.min.js" defer></script>
   <script type="module" src="./src/main.js"></script>
@@ -59,7 +59,7 @@
         <button type="button" id="nextFrame" title="Image suivante" aria-label="Image suivante">⏭️</button>
       </div>
       <div id="timeline-slider-container">
-        <label for="timeline-slider" class="sr-only">Position dans la timeline</label>
+        <label for="timeline-slider" class="sr-only">Timeline</label>
         <input type="range" id="timeline-slider" min="0" max="0" step="1" value="0">
       </div>
       <div id="timeline-actions">
