feat: add object manager

--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
           </div>
         </div>
       </div>
+      <div id="object-controls" role="region" aria-label="Objets">
+        <h3>Objets</h3>
+        <div class="control-group">
+          <label for="object-select">Bibliothèque</label>
+          <select id="object-select"></select>
+        </div>
+        <div class="control-group">
+          <input type="checkbox" id="object-behind">
+          <label for="object-behind">Derrière le pantin</label>
+        </div>
+        <div class="control-group">
+          <input type="checkbox" id="object-attach">
+          <label for="object-attach">Coller au pantin</label>
+        </div>
+        <button type="button" id="add-object-btn" aria-label="Ajouter un objet">Ajouter</button>
+      </div>
       <div id="onion-skin-controls" role="region" aria-label="Contrôles Onion Skin">
         <h3>Onion Skin</h3>
         <div class="control-group">
