--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div id="selection-info">
         <label for="selected-element-name">Sélection</label>
         <output id="selected-element-name">Pantin</output>
-      </div>
-      <div id="pantin-controls">
+        </div>
+        <div id="pantin-controls">
         <div class="control-group">
           <label for="scale-value">Échelle</label>
           <div class="value-stepper">
@@ -33,8 +33,24 @@
             <button type="button" id="rotate-plus" aria-label="Augmenter la rotation">+</button>
           </div>
         </div>
-      </div>
-      <div id="onion-skin-controls" role="region" aria-label="Contrôles Onion Skin">
+        </div>
+        <div id="object-manager">
+          <h3>Objets</h3>
+          <div class="control-group">
+            <label for="object-select">Objet</label>
+            <select id="object-select"></select>
+          </div>
+          <div class="control-group">
+            <input type="checkbox" id="object-front" checked>
+            <label for="object-front">Devant le pantin</label>
+          </div>
+          <div class="control-group">
+            <input type="checkbox" id="object-attach">
+            <label for="object-attach">Coller au pantin</label>
+          </div>
+          <button type="button" id="add-object-btn" aria-label="Ajouter l'objet">Ajouter</button>
+        </div>
+        <div id="onion-skin-controls" role="region" aria-label="Contrôles Onion Skin">
         <h3>Onion Skin</h3>
         <div class="control-group">
           <input type="checkbox" id="onion-skin-toggle">
