--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
   <div id="app-container" class="app-container">
     <aside id="inspector-panel" role="region" aria-label="Contrôles de l'inspecteur">
       <h3>Inspecteur</h3>
+      <div id="object-add">
+        <label for="object-select">Ajouter objet</label>
+        <select id="object-select"></select>
+        <button type="button" id="add-object">Ajouter</button>
+      </div>
       <div id="selection-info">
         <label for="selected-element-name">Sélection</label>
         <output id="selected-element-name">Pantin</output>
       </div>
-      <div id="pantin-controls">
+      <div id="transform-controls">
         <div class="control-group">
           <label for="scale-value">Échelle</label>
           <div class="value-stepper">
@@ -32,6 +37,15 @@
             <output id="rotate-value" for="rotate-minus rotate-plus">0</output>
             <button type="button" id="rotate-plus" aria-label="Augmenter la rotation">+</button>
           </div>
+        </div>
+      </div>
+      <div id="object-controls" hidden>
+        <div class="control-group">
+          <label><input type="checkbox" id="attach-object"> Coller au pantin</label>
+        </div>
+        <div class="control-group">
+          <button type="button" id="object-back">Derrière</button>
+          <button type="button" id="object-front">Devant</button>
         </div>
       </div>
       <div id="onion-skin-controls" role="region" aria-label="Contrôles Onion Skin">
