--- a/index.html
+++ b/index.html
@@ -34,6 +34,30 @@
           </div>
         </div>
       </div>
+      <div id="object-controls">
+        <h3>Objets</h3>
+        <div class="control-group">
+          <label for="object-select">Ajouter</label>
+          <div class="value-stepper">
+            <select id="object-select"></select>
+            <button type="button" id="add-object" aria-label="Ajouter l'objet">+</button>
+          </div>
+        </div>
+        <div class="control-group">
+          <label for="layer-select">Plan</label>
+          <select id="layer-select">
+            <option value="front">Devant</option>
+            <option value="back" selected>Derrière</option>
+          </select>
+        </div>
+        <div class="control-group">
+          <label for="attach-select">Coller à</label>
+          <select id="attach-select"></select>
+        </div>
+        <div class="control-group">
+          <button type="button" id="delete-object" aria-label="Supprimer l'objet">Supprimer</button>
+        </div>
+      </div>
       <div id="onion-skin-controls" role="region" aria-label="Contrôles Onion Skin">
         <h3>Onion Skin</h3>
         <div class="control-group">
